# antifraud_medicine_qr

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
antifraud_medicine_qr/: api.py  blockchain.py  config.py  crypto.py  exceptions.py  issuance.py  models.py  qrcode.py
static/: styles.css
templates/: index.html
tests/: conftest.py  test_api.py  test_crypto.py  test_performance.py  test_qrcode.py
